policies/templates/sourcenotallauthz.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: |-
      Requires that Istio AuthorizationPolicy rules have source principals set to something other than "*".
      https://istio.io/latest/docs/reference/config/security/authorization-policy/
    metadata.gatekeeper.sh/title: Require Istio AuthorizationPolicy Source not all
    metadata.gatekeeper.sh/version: 1.0.1
  labels:
  name: sourcenotallauthz
spec:
  crd:
    spec:
      names:
        kind: SourceNotAllAuthz
      validation:
        legacySchema: false
  targets:
  - rego: |
      package asm.guardrails.sourcenotallauthz

      # spec.rules[].from[].source.principal does not exist
      violation[{"msg": msg}] {
        p := input.review.object

        startswith(p.apiVersion, "security.istio.io/")
        p.kind == "AuthorizationPolicy"

        rule := p.spec.rules[_]

        sources := {i | rule.from[_].source[i]}

        not sources.principals

        msg := "source.principals does not exist"
      }

      # spec.rules[].from[].source.principal is set to '*'
      violation[{"msg": msg}] {
        p := input.review.object

        startswith(p.apiVersion, "security.istio.io/")
        p.kind == "AuthorizationPolicy"

        rule := p.spec.rules[_]

        principals := {v | v := rule.from[_].source.principals[_]}

        principals["*"]

        msg := "source.principals[] cannot be '*'"
      }
    target: admission.k8s.gatekeeper.sh
